@@ -1,63 +1,53 @@
 package model;
+
 public class TrechoRodovia {
-    private final String rodovia;
-    private final double quilometroInicial;
-    private final double quilometroFinal;
+    private String rodovia;
+    private int quilometroInicial;
+    private int quilometroFinal;
     private double nivelVegetacao;
     private EquipeManutencao equipeManutencao;
 
-    public TrechoRodovia(String rodovia, double quilometroInicial, double quilometroFinal, double nivelVegetacao) {
-        if (rodovia == null || rodovia.isBlank()) {
-            throw new IllegalArgumentException("A rodovia deve ser informada.");
+    public TrechoRodovia(String rodovia, int quilometroInicial, int quilometroFinal, double nivelVegetacao) {
+        if (rodovia == null || rodovia.trim().isEmpty()) {
+            this.rodovia = "Rodovia nao informada";
+        } else {
+            this.rodovia = rodovia;
         }
 
-        if (quilometroFinal <= quilometroInicial) {
-            throw new IllegalArgumentException("O quilometro final deve ser maior que o inicial.");
-        }
-
-        this.rodovia = rodovia;
         this.quilometroInicial = quilometroInicial;
         this.quilometroFinal = quilometroFinal;
         setNivelVegetacao(nivelVegetacao);
     }
 
     public void registrarCrescimento(double taxa) {
-        if (taxa < 0) {
-            throw new IllegalArgumentException("A taxa de crescimento nao pode ser negativa.");
+        if (taxa > 0) {
+            setNivelVegetacao(nivelVegetacao + taxa);
         }
-
-        setNivelVegetacao(nivelVegetacao + taxa);
     }
 
     public boolean verificarCriticidade(double limiteCritico) {
-        if (limiteCritico < 0) {
-            throw new IllegalArgumentException("O limite critico nao pode ser negativo.");
-        }
-
         return nivelVegetacao >= limiteCritico;
     }
 
     public void associarEquipeManutencao(EquipeManutencao equipeManutencao) {
-        if (equipeManutencao == null) {
-            throw new IllegalArgumentException("A equipe de manutencao deve ser informada.");
+        if (equipeManutencao != null) {
+            this.equipeManutencao = equipeManutencao;
         }
-
-        this.equipeManutencao = equipeManutencao;
     }
 
     public String obterDescricao() {
-        return rodovia + " KM " + formatarQuilometro(quilometroInicial) + " ao " + formatarQuilometro(quilometroFinal);
+        return rodovia + " KM " + quilometroInicial + " ao " + quilometroFinal;
     }
 
     public String getRodovia() {
         return rodovia;
     }
 
-    public double getQuilometroInicial() {
+    public int getQuilometroInicial() {
         return quilometroInicial;
     }
 
-    public double getQuilometroFinal() {
+    public int getQuilometroFinal() {
         return quilometroFinal;
     }
 
@@ -67,21 +57,13 @@ public class TrechoRodovia {
 
     public void setNivelVegetacao(double nivelVegetacao) {
         if (nivelVegetacao < 0) {
-            throw new IllegalArgumentException("O nivel da vegetacao nao pode ser negativo.");
+            this.nivelVegetacao = 0;
+        } else {
+            this.nivelVegetacao = nivelVegetacao;
         }
-
-        this.nivelVegetacao = nivelVegetacao;
     }
 
     public EquipeManutencao getEquipeManutencao() {
         return equipeManutencao;
-    }
-
-    private String formatarQuilometro(double quilometro) {
-        if (quilometro == Math.floor(quilometro)) {
-            return String.valueOf((int) quilometro);
-        }
-
-        return String.valueOf(quilometro);
     }
 }
